# lazy-log-parser

./: .flake8  README.md  logging.toml  pyproject.toml  requirements.txt  run.py
config/: log.py
config/tests/: test_funcs.py  test_log.py
config/utils/: funcs.py
core/: app.py
log_parser/: __init__.py  log_file_parser.py  views.py
log_parser/tests/: test_log_file_parser.py
log_parser/utils/: messages.py  type_hints.py
painless/: __init__.py  dirlib.py  mixins.py  path_manager.py
painless/tests/: test_mixins.py  test_path_manager.py
