[tool.poetry]
name = "logfile-parser"
version = "0.1.0"
description = "A log file parser using utilized by python generators."
authors = ["AliHezarpisheh <AliHezarpisheh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.2"
mypy = "^1.6.1"
logging-config = "^1.0.4"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
