[tool.poetry]
name = "logfile-parser"
version = "0.1.0"
description = "A log file parser using utilized by python generators."
authors = ["AliHezarpisheh <AliHezarpisheh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.2"
mypy = "^1.6.1"
logging-config = "^1.0.4"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "**/migrations/",
    ".venv",
    ".env",
    "env",
    "venv",
    ".git",
    ".gitignore",
    ".vscode",
    ".idea",
]

line-length = 88
indent-width = 4

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
omit = ["log_parser/views.py",]
